--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start" : "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,25 @@
   "bugs": {
     "url": "https://github.com/prajnavantha/emissio/issues"
   },
-  "homepage": "https://github.com/prajnavantha/emissio#readme"
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "express": "*",
+    "jquery": "^3.2.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "socket.io": "*",
+    "socket.io-client": "^2.0.1",
+    "webpack": "^2.5.1"
+  },
+  "homepage": "https://github.com/prajnavantha/emissio#readme",
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8"
+  }
 }
